--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "webp-converter": "2.2.3",
     "webpack": "^5.75.0",
     "webpack-stream": "^7.0.0"
+  },
+   "resolutions": {
+    "gift": "^0.10.2"
   }
 }
